--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     font-family: Helvetica, sans-serif;
 }
 
-section, header, footer, nav{
+section, header, footer{
     width: 90%;
     max-width: 1000px;
     margin: auto
@@ -32,7 +32,10 @@ section, header, footer, nav{
     display: grid;
     grid-template-columns: 70% 30%;
     gap: 10px;
+
 }
+
+
 
 p {
     font-family: ltc-bodoni-175, serif;
@@ -97,6 +100,7 @@ nav {
     background-color:#252326;
     padding: 1.5rem 0;
     font-size: 1rem;
+    width: 100%;
 }
 
 nav ul {
@@ -117,6 +121,7 @@ li{
 nav a {
     color:#f5f5f5;
     font-weight: bold;
+    text-align: left;
 }
 
 nav a:hover {
@@ -125,8 +130,16 @@ nav a:hover {
     transition: all 0.3s ease-in-out;
 }
 
-table{
-    margin: auto;
-    width: 100%;
-    max-width: 1000px;
+.row3{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 1rem;
+    width: fit-content;
+    align-content: center;
+
+}
+
+.c3{
+    text-align: left;
+    align-items: center;
 }
