--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@
 
 /*--starting main styling--*/
 
+html{
+    scroll-padding-top: 10rem;
+}
+
 body {
     background: #f3f2ee;
     color: #252326;
@@ -29,7 +33,7 @@ h1{
     color: #252326;
     letter-spacing: -6px;
     line-height: 5rem;
-    padding-top: 14rem;
+    padding-top: 15rem;
     padding-bottom: 10rem;
 }
 
@@ -40,42 +44,30 @@ h2{
     text-transform: uppercase;
     letter-spacing: -0.7px;
     line-height: 2rem;
+    padding: 2rem 0;
 }
 
-h5{
+h3{
     font-weight: bold;
     color: #f3f2ee;
+    text-align: right;
+    line-height: 1.5rem;
+    font-size: 1.2rem;
+}
+
+h4{
+    color: #f3f2ee;
+    font-weight: bold;
+    padding-top: 5rem;
+    padding-bottom: 2rem;
 }
 
 .red{
     font-weight: bold;
     color: #cd2a1c;
-
 }
+
 /*--Paragraph Stylings--*/
-
-p {
-    font-family: ltc-bodoni-175, serif;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    letter-spacing: 0.01rem;
-    padding-bottom: 2rem;
-}
-
-.row1{
-    display: grid;
-    grid-template-columns: 30% 70%;
-    gap: 10px;
-    padding-top: 0.4rem;
-}
-
-.row2{
-    display: grid;
-    grid-template-columns: 70% 30%;
-    gap: 10px;
-    padding-top: 10rem;
-    padding-bottom: 10rem;
-}
 
 hr{
     width: 90%;
@@ -87,13 +79,45 @@ hr{
     border: 0 none;
 }
 
-.para{
-padding: 10rem 0;
+p {
+    font-family: ltc-bodoni-175, serif;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    letter-spacing: 0.01rem;
+
 }
 
+.row1{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    gap: 10px;
+    padding-top: 0.4rem;
+}
 
+.para{
+    padding: 5rem 0;
+}
 
+/*--IMG and Quote Stylings--*/
 
+.row2{
+    display: grid;
+    grid-template-columns: 70% 30%;
+    gap: 10px;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    row-gap: 5rem;
+}
+
+.c2{
+    display: flex;
+    align-items: flex-end;
+    justify-content: right;
+}
+
+img{
+    width: 100%;
+}
 
 blockquote{
     hanging-punctuation: first;
@@ -110,6 +134,12 @@ blockquote{
     justify-content: none;
     align-items: none;
 }
+
+.block{
+    background-color: #252326;
+}
+
+/*--Nav Stylings--*/
 
 nav {
     position: fixed;
@@ -129,7 +159,6 @@ nav ul {
 
 a {
     text-decoration: none;
-
 }
 
 li{
@@ -142,7 +171,6 @@ nav a {
     text-align: left;
     letter-spacing: -0.001px;
     line-height: 1rem;
-
 }
 
 nav a:hover {
@@ -154,28 +182,21 @@ nav a:hover {
 .flexcontain{
     width: 90%;
     max-width: 1000px;
-    margin: auto
-
+    margin: auto;
 }
+
 .row3{
     margin:auto;
     display: flex;
     justify-content: space-between;
-
-
-
 }
 
 .c3{
     text-align: left;
     align-items: center;       
-    border-left:#f3f2ee;
-     border-width: 5px;
 }
 
-.block{
-    background-color: #252326;
-}
+/*--Footer Stylings--*/
 
 .block2{
     color:#f3f2ee;
@@ -183,21 +204,11 @@ nav a:hover {
     padding: 10rem 0;
 }
 
-h2{
-    padding-bottom: 2rem;
-}
-
 footer a{
     color: #f3f2ee;
     font-weight: bold;
+    line-height: 3rem;
 
-}
-
-h6{
-    color: #f3f2ee;
-    font-weight: bold;
-    padding-top: 5rem;
-    padding-bottom: 2rem;
 }
 
 footer a:hover {
@@ -206,10 +217,100 @@ footer a:hover {
     transition: all 0.3s ease-in-out;
 }
 
-img{
-    width: 100%;
+footer p{
+    padding: 1rem 0;
 }
 
-html{
-    scroll-padding-top: 10rem;
+/*-- Quote Cite Stylings--*/
+
+.c3{
+    display: flex;
+    align-items: flex-end;
 }
+
+@media (max-width: 824px) {
+    h1{
+        font-size: 5.5rem;
+        padding-top: 13rem;
+        padding-bottom: 10rem;
+        letter-spacing: -4px;
+        line-height: 3.6rem;
+
+    }
+
+    h2{
+        font-size: 1.5rem;
+        line-height: 1.8rem;
+        padding-top: 0rem;
+    }
+    #quote{
+        font-size: 2.6rem;
+    }
+
+}
+
+@media (max-width: 428px) {
+    h1{
+        font-size: 2.5rem;
+        padding-top: 8rem;
+        padding-bottom: 4rem;
+        letter-spacing: -1px;
+        line-height: 1.6rem;
+
+    }
+
+    p{
+        font-size: 0.85rem;
+        line-height: 1.1rem;
+    }
+
+    h2{
+        font-size: 0.85rem;
+        line-height: 1.1rem;
+    }
+
+    h3{
+        font-size: 0.7rem;
+        line-height: 0.8rem;
+    }
+
+    #quote{
+        font-size: 1.5rem;
+    }
+
+    .para{
+        padding: 3rem 0;
+    }
+
+    .row2{
+        padding: 3rem 0;
+    }
+
+    .credit{
+        font-size: 1rem;
+    }
+
+    footer a{
+        line-height: 1.4rem;
+    }
+
+    nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color:#252326;
+        padding: 1.5rem 0;
+        font-size: 0.5rem;
+        width: 100%;       
+    }
+
+    nav a {
+        color:#f5f5f5;
+        font-weight: bold;
+        text-align: left;
+        letter-spacing: -0.001px;
+        line-height: 0.5rem;
+    }
+
+}
+
