--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ h2{
     text-transform: uppercase;
     letter-spacing: -0.7px;
     line-height: 2rem;
+  
+
+}
+
+footer h2{
     padding: 2rem 0;
 }
 
@@ -84,6 +89,7 @@ p {
     font-size: 1.5rem;
     line-height: 2rem;
     letter-spacing: 0.01rem;
+    padding-bottom: 2rem;
 
 }
 
@@ -95,7 +101,8 @@ p {
 }
 
 .para{
-    padding: 5rem 0;
+    padding-top: 5rem ;
+    padding-bottom: 3rem;
 }
 
 /*--IMG and Quote Stylings--*/
@@ -195,6 +202,14 @@ nav a:hover {
     text-align: left;
     align-items: center;       
 }
+
+.back-to-top {
+    color: #252326;
+    width: 60px;
+    position: fixed;
+    right: 4rem;
+    bottom: 4rem;
+  }
 
 /*--Footer Stylings--*/
 
@@ -312,5 +327,16 @@ footer p{
         line-height: 0.5rem;
     }
 
+    hr{
+        width: 90%;
+        max-width: 1000px;
+        margin: auto;
+        height: 3px;
+        color:#252326;
+        background-color: #252326;
+        border: 0 none;
+    }
+
 }
+
 
