--- a/css/style.css
+++ b/css/style.css
@@ -37,19 +37,12 @@ h1{
     padding-bottom: 10rem;
 }
 
-
 h2{
     font-weight: bold;
     font-size: 1.5rem;
     text-transform: uppercase;
     letter-spacing: -0.7px;
     line-height: 2rem;
-  
-
-}
-
-footer h2{
-    padding: 2rem 0;
 }
 
 h3{
@@ -224,7 +217,7 @@ nav a:hover {
 .block2{
     color:#f3f2ee;
     background-color: #252326;
-    padding: 10rem 0;
+    padding: 5rem 0;
 }
 
 footer a{
@@ -242,6 +235,10 @@ footer a:hover {
 
 footer p{
     padding: 1rem 0;
+}
+
+.footerp{
+    padding: 2rem 0;
 }
 
 /*-- Quote Cite Stylings--*/
