--- a/css/style.css
+++ b/css/style.css
@@ -265,9 +265,17 @@ footer p{
         line-height: 1.8rem;
         padding-top: 0rem;
     }
+
     #quote{
-        font-size: 2.6rem;
+        font-size: 3rem;
     }
+
+    .back-to-top {
+        width: 50px;
+        position: fixed;
+        right: 2rem;
+        bottom: 2rem;
+      }
 
 }
 
@@ -342,6 +350,17 @@ footer p{
         color:#252326;
         background-color: #252326;
         border: 0 none;
+    }
+
+    .back-to-top {
+        width: 30px;
+        position: fixed;
+        right: 1rem;
+        bottom: 1rem;
+      }
+
+    #cred{
+        font-size: 0.5rem;
     }
 
 }
