--- a/css/style-2.css
+++ b/css/style-2.css
@@ -199,7 +199,7 @@ nav a:hover {
 /*--Back to Top Styling--*/
 
 .back-to-top {
-    width: 70px;
+    width: 60px;
     position: fixed;
     right: 4rem;
     bottom: 4rem;
@@ -243,6 +243,40 @@ footer p{
     padding: 2rem 0;
 }
 
+/*--Collapse List Styling--*/
+
+.collapsible {
+    background-color: #252326;
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+}
+  
+.active, .collapsible:hover {
+    background-color: #252326;
+}
+  
+.content {
+    padding: 2rem 0;
+    display: none;
+    overflow: hidden;
+    background-color: #252326;
+}
+
+.drop-arrow{
+    width: 40px;
+}
+
+.cls-1{
+    fill:#f3f2ee;
+}
+
+.drop-arrow:hover{
+    color:#444;
+}
+
 /*-- Quote Cite Stylings--*/
 
 .c3{
@@ -250,27 +284,28 @@ footer p{
     align-items: flex-end;
 }
 
-/* Style the header: fixed position (always stay at the top) */
+/*--progress bar styling--*/
+
 .header {
     position: fixed;
     top: 0;
     z-index: 1;
     width: 100%;
-  }
+}
   
-/* The progress container (grey background) */
-  .progress-container {
+.progress-container {
     width: 100%;
     height: 6px;
     background: #252326; 
-  }
+}
   
-/* The progress bar (scroll indicator) */
-  .progress-bar {
+.progress-bar {
     height: 6px;
     background: #cd2a1c;
     width: 0%;
-  }
+}
+
+
 
 @media (max-width: 824px) {
     h1{
@@ -385,6 +420,27 @@ footer p{
         font-size: 0.5rem;
     }
 
+    .progress-container {
+        width: 100%;
+        height: 3px;
+        background: #252326; 
+    }
+      
+    .progress-bar {
+        height: 3px;
+        background: #cd2a1c;
+        width: 0%;
+    }
+    
+    .drop-arrow{
+        width: 20px;
+    }
+    
+    footer p{
+        padding: 1rem 0;
+        font-size: 0.7rem;
+        line-height: 1.4rem;
+    }
 }
 
 
